# rdflib-sparql-dataframe

./: README.md  Taskfile.yaml  pyproject.toml  rdflib_sparql_dataframe.py  test_rdflib_sparql_dataframe.py
